website update Oct 2025

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,7 +13,7 @@ website:
     left:
       - text: Home
         href: index.qmd
-      - text: Education
+      - text: Career and Awards
         href: education.qmd
       - text: Talks
         href: talks.qmd  
